# res2h

./: CMakeLists.txt
src/: res2h.cpp  res2hdump.cpp
